Image now changes on user login. game.js updated to change image after API called using the cookie set in the browser.

--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body onload="getProgress()">
+<body onload="getProgress()" id="body">
 <h1>Logo</h1>
 
 <div id="stats">
