new images on game.html, need to make one working level then worry about multiple stages and saving/retrieving progress for later. ya feel??

--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -19,11 +19,11 @@
 <body onload="getProgress()" id="body">
 <h1>Logo</h1>
 
-<div id="stats">
-
-</div>
 <div style="margin-left:5vw;float:left">
-    <p class="minortext">swae</p>
+    <img src=img/slimemonster.jpg alt="enemy" width="30%" height="auto" </img> <img src="img/batman.png" alt="you" width="25%" height="auto"</img>
+
+
+
 </div>
 </body>
 </html>
