put game code in getProgress() so now it loads html before game aspects. Must figure out method of inputting and outputting to player without prompts and console.log!!

--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -19,10 +19,11 @@
 <body onload="getProgress()" id="body">
 <h1>Logo</h1>
 
-<div style="margin-left:5vw;float:left">
+<div> style="margin-left:5vw;float:left">
     <img src=img/slimemonster.jpg alt="enemy" width="30%" height="auto" </img> <img src="img/batman.png" alt="you" width="25%" height="auto"</img>
-
-
+    <br>
+    <input type="text" id="textinput">
+    <p id="textoutput">yes </p>
 
 </div>
 </body>
