got game code in a button so now getprogress runs as normal. still need to do most of the shit and not much time. shitting myself

--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -19,11 +19,14 @@
 <body onload="getProgress()" id="body">
 <h1>Logo</h1>
 
-<div> style="margin-left:5vw;float:left">
-    <img src=img/slimemonster.jpg alt="enemy" width="30%" height="auto" </img> <img src="img/batman.png" alt="you" width="25%" height="auto"</img>
+<div style="margin-left:5vw;float:left">
+    <img src=img/slimemonster.jpg alt="enemy" width="20%" height="auto" </img> <img src="img/batman.png" alt="you" width="15%" height="auto"</img>
     <br>
     <input type="text" id="textinput">
+    <br>
+    <button onclick="rungame()"> click me </button>
     <p id="textoutput">yes </p>
+
 
 </div>
 </body>
