Can't makes outputs to a <p> element when trying to do so from runGame() for some reason. NEED HELP. Have made a changetext() function to test outputting to the <p> element from outside runGame() and it works perfectly??

--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -24,8 +24,9 @@
     <br>
     <input type="text" id="textinput">
     <br>
-    <button onclick="rungame()"> click me </button>
-    <p id="textoutput">yes </p>
+    <button onclick="runGame()">Play Game</button>
+    <button onclick="changetext()"> change text</button> <!-- this button exists only to test the changetext() function -->
+    <p id="textoutput">game output</p>
 
 
 </div>
