--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -18,14 +18,12 @@
 </head>
 <body onload="getProgress()" id="body">
 <h1>Logo</h1>
-
 <div style="margin-left:5vw;float:left">
     <img src=img/slimemonster.jpg alt="enemy" width="20%" height="auto" </img> <img src="img/batman.png" alt="you" width="15%" height="auto"</img>
     <br>
-    <input type="text" id="textinput">
+    <input type="text" id="textinput"> <button onclick="userInput()">Enter</button>
     <br>
     <button onclick="runGame()">Play Game</button>
-    <button onclick="changetext()"> change text</button> <!-- this button exists only to test the changetext() function -->
     <p id="textoutput">game output</p>
 
 
