--- a/resources/client/game.html
+++ b/resources/client/game.html
@@ -25,10 +25,10 @@
 <div style="margin-left:5vw;float:left">
     <img src=img/slimemonster.jpg alt="enemy" height="auto" width="13%"</img> <img src="img/batman.png" alt="you" width="10%" height="auto"</img>
     <br>
-    <input type="text" id="textinput"> <button onclick="userInput()">Enter</button>
+    <input class="textinput" type="text" id="textinput"> <button class="buttons" onclick="userInput()">Enter</button>
     <br>
-    <button onclick="runGame()">Play Game</button>
-    <p id="textoutput">game output</p>
+    <button class="buttons" onclick="runGame()">Play Game</button>
+    <pre id="textoutputpre">pre output</pre>
 
 
 </div>
